...
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/pemisahTextFavHomePage"
                app:layout_constraintStart_toStartOf="parent"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_favourite_recipe"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:paddingEnd="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pemisahTextFavHomePage"
                app:layout_constraintStart_toStartOf="parent"/>
...
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    app:menu="@menu/bottom_nav_menu" />
            </com.google.android.material.bottomappbar.BottomAppBar>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_black"
                app:layout_anchor="@+id/bottomappbar" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </FrameLayout>
...
