...
                android:gravity="center"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageFavouriteRecipe"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageFavouriteRecipe"
                android:layout_width="wrap_content"
...
