<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.TestLoginActivity">

    <ProgressBar
        android:id="@+id/pbar_login"
        android:visibility="invisible"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/headerLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/below_shadow"
        app:layout_constraintBottom_toBottomOf="@id/headerLogin"
        app:layout_constraintStart_toStartOf="parent"
        />
    <LinearLayout
        android:id="@+id/layoutImageLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/headerLogin"
        app:layout_constraintStart_toStartOf="parent">

<!--        <View-->
<!--            android:id="@+id/pemisahImageLogin"-->
<!--            android:layout_width="2dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginHorizontal="8dp"-->
<!--            android:background="#f2f2f2"-->
<!--            />-->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo_apps"
            app:layout_constraintBottom_toBottomOf="@id/headerLogin"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtFieldUsernameLog"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Username"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutImageLogin">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>




    <!--    <EditText-->
    <!--        android:id="@+id/username"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="96dp"-->
    <!--        android:hint="@string/prompt_email"-->
    <!--        android:inputType="textEmailAddress"-->
    <!--        android:selectAllOnFocus="true"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtFieldPasswordLog"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="Password"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFieldUsernameLog">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--        android:id="@+id/password"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:hint="@string/prompt_password"-->
    <!--        android:imeActionLabel="@string/action_sign_in_short"-->
    <!--        android:imeOptions="actionDone"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:selectAllOnFocus="true"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/txtFieldUsernameLog" />-->


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="14sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFieldPasswordLog"
        app:layout_constraintVertical_bias="0.2"
        />
    <!--    <Button-->
    <!--        android:id="@+id/login"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="start"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:text="Login"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/txtFieldPasswordLog"-->
    <!--        app:layout_constraintVertical_bias="0.2" />-->

    <Button
        android:id="@+id/btnToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:text="Register New Account"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        app:strokeColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:paddingVertical="16dp"
        android:paddingHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtFieldPasswordLog"
        app:layout_constraintStart_toStartOf="@+id/txtFieldPasswordLog"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnToRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_pass"
        android:textStyle=""
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>